--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
     "purescript-either": "~0.1.4",
     "purescript-maybe": "~0.2.1",
     "purescript-tuples": "~0.2.2",
-    "purescript-lens": "split"
+    "purescript-lens": "~0.4.0"
   }
 }
