--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,6 @@
   "description": "Collection of optical functions. (Lenses, prisms, etc)",
   "license": "MIT",
   "dependencies": {
-    "purescript-either": "~0.1.4",
-    "purescript-maybe": "~0.2.1",
-    "purescript-tuples": "~0.3.0",
-    "purescript-lens": "~0.7.0"
+    "purescript-lens": "master"
   }
 }
