don't use purescript-lens master

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,6 @@
   "description": "Collection of optical functions. (Lenses, prisms, etc)",
   "license": "MIT",
   "dependencies": {
-    "purescript-lens": "master"
+    "purescript-lens": "^0.9.0"
   }
 }
